20200313 at 1:02am added text to all visualizations, fixed collapsable button, and added data html file.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,6 +74,10 @@ p{
     margin-right:85px;
 }
 
+#dtable{
+
+}
+
 .image-nav{
 width: 100%;
 height: 100%;
